# FocusMovingMFC

./: CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  CvvImage.cpp  CvvImage.h  DirectionVector.cpp  DirectionVector.h  Dlg_Tools.cpp  Dlg_Tools.h  EppendorfPump.cpp  EppendorfPump.h  JoyStick - Copy.cpp  JoyStick - Copy.h  KalmanFilterZ.cpp  KalmanFilterZ.h  MainFrm - Copy.cpp  MainFrm - Copy.h  MainFrm.cpp  MainFrm.h  Methods.cpp  Methods.h  OpenCV.h  PDAFfilter.cpp  PDAFfilter.h  ParameterDefinition.h  Prior.lib  PriorStage.cpp  PriorStage.h  RS232Communication.cpp  RS232Communication.h  ReadMe.txt  RoboticBiopsy.aps  RoboticBiopsy.cpp  RoboticBiopsy.h  RoboticBiopsy.rc  RoboticBiopsy.sln  RoboticBiopsy.vcxproj  RoboticBiopsy.vcxproj.filters  RoboticBiopsyDoc.cpp  (+26 more)
Debug/: RoboticBiopsy.res
Debug/RoboticI.0CE318AB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RoboticICSI-Laser-DATABASE.lastbuildstate  rc.command.1.tlog  rc.write.1.tlog
Release/: RoboticBiopsy.res  RoboticICSI-Laser-DATABASE.iobj  RoboticICSI-Laser-DATABASE.ipdb
Release/RoboticI.0CE318AB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RoboticICSI-Laser-DATABASE.lastbuildstate  RoboticICSI-Laser-DATABASE.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
res/: RoboticBiopsy.rc2
x64/Debug/RoboticI.0CE318AB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  rc.read.1.tlog  (+5 more)
x64/Release/: RoboticBiopsy.res  RoboticICSI-Laser-DATABASE.iobj  RoboticICSI-Laser-DATABASE.ipdb
(+11 files in other folders)
